apps/bux-wallet/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bux-wallet-backend-demo
  labels:
    app.kubernetes.io/name: bux-wallet-backend
    app.kubernetes.io/instance: bux-wallet-backend-demo
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: bux-wallet
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bux-wallet-backend-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bux-wallet-backend
        app.kubernetes.io/instance: bux-wallet-backend-demo
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: bux-wallet
        app.kubernetes.io/managed-by: kubectl
    spec:
      imagePullSecrets:
        - name: 4chainregistry
      containers:
        - name: bux-wallet-backend-demo
          image: 4chain/bux-wallet-backend:v0.13.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
